get events, update and delete event for calendar
