# delivery/calendar.go
@@ -92,6 +92,7 @@ func (api *Handler) CreateCalendar(w http.ResponseWriter, r *http.Request) {
 // @Accept  json
 // @Produce  json
 // @Tags Calendar
+// @Param event body model.CalendarEvent true "Event for creating"
 // @Success 200 {object} model.Response
 // @Failure 401 {object} model.Error "unauthorized - Access token is missing or invalid"
 // @Failure 500 {object} model.Error "internal server error - Request is valid but operation failed at server side"
@@ -101,16 +102,116 @@ func (api *Handler) CreateCalendarEvent(w http.ResponseWriter, r *http.Request) 
 		return
 	}
 	mockTeackerID := 1
-	mockClassID := 1
 
 	decoder := json.NewDecoder(r.Body)
-	var req model.CreateCalendarEvent
+	var req model.CalendarEvent
 	if err := decoder.Decode(&req); err != nil {
 		returnErrorJSON(w, e.ErrBadRequest400)
 		return
 	}
 
-	err := api.usecase.CreateCalendarEvent(&req, mockTeackerID, mockClassID)
+	err := api.usecase.CreateCalendarEvent(&req, mockTeackerID)
+	if err != nil {
+		log.Println("Error ", err)
+		returnErrorJSON(w, e.ErrServerError500)
+		return
+	}
+
+	json.NewEncoder(w).Encode(&model.Response{})
+}
+
+// GetCalendarEvents godoc
+// @Summary Get teacher's calendar event
+// @Description Get teacher's calendar event
+// @ID GetCalendarEvents
+// @Accept  json
+// @Produce  json
+// @Tags Calendar
+// @Success 200 {object} model.CalendarEvent
+// @Failure 401 {object} model.Error "unauthorized - Access token is missing or invalid"
+// @Failure 500 {object} model.Error "internal server error - Request is valid but operation failed at server side"
+// @Router /calendar/events [get]
+func (api *Handler) GetCalendarEvents(w http.ResponseWriter, r *http.Request) {
+	if r.Method == http.MethodOptions {
+		return
+	}
+	mockTeacherID := 1
+
+	events, err := api.usecase.GetCalendarEvents(mockTeacherID)
+	if err != nil {
+		log.Println("Error ", err)
+		returnErrorJSON(w, e.ErrServerError500)
+		return
+	}
+
+	json.NewEncoder(w).Encode(&model.CalendarEvents{Events: events})
+}
+
+// DeleteCalendarEvent godoc
+// @Summary Delete teacher's calendar event
+// @Description Delete teacher's calendar event
+// @ID DeleteCalendarEvent
+// @Accept  json
+// @Produce  json
+// @Tags Calendar
+// @Param event body model.DeleteEvent true "Event for deleting"
+// @Success 200 {object} model.Response
+// @Failure 401 {object} model.Error "unauthorized - Access token is missing or invalid"
+// @Failure 500 {object} model.Error "internal server error - Request is valid but operation failed at server side"
+// @Router /calendar/event [delete]
+func (api *Handler) DeleteCalendarEvent(w http.ResponseWriter, r *http.Request) {
+	if r.Method == http.MethodOptions {
+		return
+	}
+	mockTeacherID := 1
+
+	decoder := json.NewDecoder(r.Body)
+	var req model.DeleteEvent
+	if err := decoder.Decode(&req); err != nil {
+		returnErrorJSON(w, e.ErrBadRequest400)
+		return
+	}
+
+	err := api.usecase.DeleteCalendarEvent(mockTeacherID, req.ID)
+	if err != nil {
+		log.Println("Error ", err)
+		returnErrorJSON(w, e.ErrServerError500)
+		return
+	}
+
+	json.NewEncoder(w).Encode(&model.Response{})
+}
+
+// UpdateCalendarEvent godoc
+// @Summary Update teacher's calendar event
+// @Description Update teacher's calendar event
+// @ID UpdateCalendarEvent
+// @Accept  json
+// @Produce  json
+// @Tags Calendar
+// @Param event body model.CalendarEvent true "Event for updating"
+// @Success 200 {object} model.Response
+// @Failure 401 {object} model.Error "unauthorized - Access token is missing or invalid"
+// @Failure 500 {object} model.Error "internal server error - Request is valid but operation failed at server side"
+// @Router /calendar/event [post]
+func (api *Handler) UpdateCalendarEvent(w http.ResponseWriter, r *http.Request) {
+	if r.Method == http.MethodOptions {
+		return
+	}
+	mockTeacherID := 1
+
+	decoder := json.NewDecoder(r.Body)
+	var req model.CalendarEvent
+	if err := decoder.Decode(&req); err != nil {
+		returnErrorJSON(w, e.ErrBadRequest400)
+		return
+	}
+	if req.ID == "" {
+		returnErrorJSON(w, e.ErrBadRequest400)
+		return
+	}
+
+	err := api.usecase.UpdateCalendarEvent(&req, mockTeacherID)
 	if err != nil {
 		log.Println("Error ", err)
 		returnErrorJSON(w, e.ErrServerError500)
