# usecase/calendar.go
@@ -3,12 +3,16 @@ package usecase
 import (
 	"context"
 	"encoding/json"
+	"fmt"
 	"log"
 	e "main/domain/errors"
 	"main/domain/model"
 	"net/http"
 	"os"
 	"os/exec"
+	"strconv"
+	"strings"
+	"time"
 
 	"golang.org/x/oauth2"
 	"golang.org/x/oauth2/google"
@@ -99,6 +103,29 @@ func saveToken(path string, token *oauth2.Token) {
 	json.NewEncoder(f).Encode(token)
 }
 
+func (uc *Usecase) getCalendarServicelient() (*calendar.Service, error) {
+	ctx := context.Background()
+	b, err := os.ReadFile(uc.credentialsFile)
+	if err != nil {
+		log.Println("Unable to read client secret file: ", err)
+		return nil, e.StacktraceError(err)
+	}
+
+	config, err := google.ConfigFromJSON(b, calendar.CalendarScope)
+	if err != nil {
+		log.Println("Unable to parse client secret file to config: ", err)
+		return nil, e.StacktraceError(err)
+	}
+	client, err := getClient(uc.tokenFile, config)
+	if err != nil {
+		log.Println("Unable to get client from token: ", err)
+		return nil, e.StacktraceError(err)
+	}
+
+	return calendar.NewService(ctx, option.WithHTTPClient(client))
+
+}
+
 func (uc *Usecase) SetOAUTH2Token() error {
 	//ctx := context.Background()
 	b, err := os.ReadFile(uc.credentialsFile)
@@ -164,26 +191,8 @@ func (uc *Usecase) SaveOAUTH2Token(authCode string) error {
 }
 
 func (uc *Usecase) CreateCalendar(teacherID int) (*model.CreateCalendarResponse, error) {
-	ctx := context.Background()
-	b, err := os.ReadFile(uc.credentialsFile)
-	if err != nil {
-		log.Println("Unable to read client secret file: ", err)
-		return nil, e.StacktraceError(err)
-	}
 
-	config, err := google.ConfigFromJSON(b, calendar.CalendarScope)
-	if err != nil {
-		log.Println("Unable to parse client secret file to config: ", err)
-		return nil, e.StacktraceError(err)
-	}
-
-	client, err := getClient(uc.tokenFile, config)
-	if err != nil {
-		log.Println("Unable to get client from token: ", err)
-		return nil, e.StacktraceError(err)
-	}
-
-	srv, err := calendar.NewService(ctx, option.WithHTTPClient(client))
+	srv, err := uc.getCalendarServicelient()
 	if err != nil {
 		log.Println("Unable to retrieve calendar Client: ", err)
 		return nil, e.StacktraceError(err)
@@ -212,34 +221,15 @@ func (uc *Usecase) CreateCalendar(teacherID int) (*model.CreateCalendarResponse,
 	return &model.CreateCalendarResponse{ID: innerID, IDInGoogle: cal.Id}, nil
 }
 
-func (uc *Usecase) CreateCalendarEvent(req *model.CreateCalendarEvent, teacherID int, classID int) error {
-	ctx := context.Background()
-	b, err := os.ReadFile(uc.credentialsFile)
-	if err != nil {
-		log.Println("Unable to read client secret file: ", err)
-		return e.StacktraceError(err)
-	}
-
-	config, err := google.ConfigFromJSON(b, calendar.CalendarScope)
-	if err != nil {
-		log.Println("Unable to parse client secret file to config: ", err)
-		return e.StacktraceError(err)
-	}
-
-	client, err := getClient(uc.tokenFile, config)
-	if err != nil {
-		log.Println("Unable to get client from token: ", err)
-		return e.StacktraceError(err)
-	}
-
-	srv, err := calendar.NewService(ctx, option.WithHTTPClient(client))
+func (uc *Usecase) CreateCalendarEvent(req *model.CalendarEvent, teacherID int) error {
+	srv, err := uc.getCalendarServicelient()
 	if err != nil {
 		log.Println("Unable to retrieve calendar Client: ", err)
 		return e.StacktraceError(err)
 	}
 
 	event := &calendar.Event{
-		Summary:     req.Title,
+		Summary:     req.Title + " Class " + fmt.Sprintf("%d", req.ClassID),
 		Description: req.Description,
 		Start: &calendar.EventDateTime{
 			DateTime: req.StartDate,
@@ -256,7 +246,7 @@ func (uc *Usecase) CreateCalendarEvent(req *model.CreateCalendarEvent, teacherID
 		log.Println("DB err: ", err)
 		return e.StacktraceError(err)
 	}
-	//log.Println(calendarID, req.StartDate, req.EndDate)
+
 	event, err = srv.Events.Insert(calendarID, event).Do()
 	if err != nil {
 		log.Println("Unable to create event: ", err)
@@ -265,13 +255,117 @@ func (uc *Usecase) CreateCalendarEvent(req *model.CreateCalendarEvent, teacherID
 
 	//MockClassID := 1
 	bcMsg := model.ClassBroadcastMessage{
-		ClassID:     classID,
+		ClassID:     req.ClassID,
 		Title:       "Новое событие!" + "\n" + req.Title,
 		Description: req.Description + "\n" + "Начало: " + req.StartDate + "\n" + "Окончание: " + req.EndDate,
 		Attaches:    []string{},
 	}
 	if err := uc.chatService.BroadcastMsg(&bcMsg); err != nil {
-		return err
+		return e.StacktraceError(err)
+	}
+	return nil
+}
+
+func (uc *Usecase) GetCalendarEvents(teacherID int) ([]*model.CalendarEvent, error) {
+	srv, err := uc.getCalendarServicelient()
+	if err != nil {
+		log.Println("Unable to retrieve calendar Client: ", err)
+		return nil, e.StacktraceError(err)
+	}
+	calendarID, err := uc.store.GetCalendarGoogleID(teacherID)
+	if err != nil {
+		log.Println("DB err: ", err)
+		return nil, e.StacktraceError(err)
+	}
+	t := time.Now().Format(time.RFC3339)
+	events, err := srv.Events.List(calendarID).ShowDeleted(false).
+		SingleEvents(true).TimeMin(t).MaxResults(100).OrderBy("startTime").Do()
+	if err != nil {
+		log.Println("Unable to retrieve next ten of the user's events: ", err)
+		return nil, e.StacktraceError(err)
+	}
+
+	ans := []*model.CalendarEvent{}
+	for _, item := range events.Items {
+		s := strings.Split(item.Summary, " ")
+		classID := 0
+		if len(s) > 2 && s[len(s)-2] == "Class" {
+			classIDs := s[len(s)-1]
+			classID, err = strconv.Atoi(classIDs)
+			if err != nil {
+				log.Println("error: ", err)
+			}
+		}
+
+		tmp := &model.CalendarEvent{Title: item.Summary, Description: item.Description,
+			StartDate: item.Start.DateTime, EndDate: item.End.DateTime, ClassID: classID, ID: item.Id}
+		ans = append(ans, tmp)
+	}
+
+	return ans, nil
+}
+
+func (uc *Usecase) DeleteCalendarEvent(teacherID int, eventID string) error {
+	srv, err := uc.getCalendarServicelient()
+	if err != nil {
+		log.Println("Unable to retrieve calendar Client: ", err)
+		return e.StacktraceError(err)
+	}
+	calendarID, err := uc.store.GetCalendarGoogleID(teacherID)
+	if err != nil {
+		log.Println("DB err: ", err)
+		return e.StacktraceError(err)
+	}
+	err = srv.Events.Delete(calendarID, eventID).Do()
+	if err != nil {
+		log.Println("Unable to delete event: ", err)
+		return e.StacktraceError(err)
+	}
+
+	return nil
+}
+
+func (uc *Usecase) UpdateCalendarEvent(req *model.CalendarEvent, teacherID int) error {
+	srv, err := uc.getCalendarServicelient()
+	if err != nil {
+		log.Println("Unable to retrieve calendar Client: ", err)
+		return e.StacktraceError(err)
+	}
+
+	event := &calendar.Event{
+		Summary:     req.Title + " Class " + fmt.Sprintf("%d", req.ClassID),
+		Description: req.Description,
+		Start: &calendar.EventDateTime{
+			DateTime: req.StartDate,
+			TimeZone: "Europe/Moscow",
+		},
+		End: &calendar.EventDateTime{
+			DateTime: req.EndDate,
+			TimeZone: "Europe/Moscow",
+		},
+		Visibility: "public",
+	}
+	calendarID, err := uc.store.GetCalendarGoogleID(teacherID)
+	if err != nil {
+		log.Println("DB err: ", err)
+		return e.StacktraceError(err)
+	}
+
+	event, err = srv.Events.Update(calendarID, req.ID, event).Do()
+	if err != nil {
+		log.Println("Unable to update event: ", err)
+		return e.StacktraceError(err)
+	}
+
+	//MockClassID := 1
+	bcMsg := model.ClassBroadcastMessage{
+		ClassID:     req.ClassID,
+		Title:       "Событие обновлено!" + "\n" + req.Title,
+		Description: req.Description + "\n" + "Начало: " + req.StartDate + "\n" + "Окончание: " + req.EndDate,
+		Attaches:    []string{},
+	}
+	if err := uc.chatService.BroadcastMsg(&bcMsg); err != nil {
+		return e.StacktraceError(err)
 	}
 	return nil
 }
